--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 jenkins_home/logs/**
 jenkins_home/caches/**
 jenkins_home/jobs/**
+jenkins_home/workspace/**
+jenkins_home/nodes/**
 
 ### terraform
 **/.terraform
