--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 jenkins_home/logs/**
 jenkins_home/caches/**
 jenkins_home/jobs/**
+!jenkins_home/jobs/pipeline*/config.xml
 jenkins_home/workspace/**
 jenkins_home/nodes/**
 
