--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 ### jenkins
 /jenkins_home/logs/**
 /jenkins_home/caches/**
+/jenkins_home/jobs/pipeline*/*
 !/jenkins_home/jobs/pipeline*/config.xml
-/jenkins_home/jobs/**
 /jenkins_home/workspace/**
 /jenkins_home/nodes/**
 
